--- a/index.html
+++ b/index.html
@@ -30,60 +30,63 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+    
+      
       <div class="row">
        <div class="col-sm-1">9a</div>
-       <div class="col-sm-10">asda</div>
-       <div class="col-sm-1">asda</div>
+       <div class="col-sm-10">Text</div>
+       <div class="col-sm-1">Save Icon</div>
       </div>
 
       <div class="row">
         <div class="col-sm-1">10a</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
 
        <div class="row">
         <div class="col-sm-1">11a</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
 
        <div class="row">
         <div class="col-sm-1">12p</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
 
        <div class="row">
         <div class="col-sm-1">1p</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
 
        <div class="row">
         <div class="col-sm-1">2p</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
 
        <div class="row">
         <div class="col-sm-1">3p</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
 
        <div class="row">
         <div class="col-sm-1">4p</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
 
        <div class="row">
         <div class="col-sm-1">5p</div>
-        <div class="col-sm-10">asda</div>
-        <div class="col-sm-1">asda</div>
+        <div class="col-sm-10">Text</div>
+        <div class="col-sm-1">Save Icon</div>
        </div>
-
+   
+</div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="js/script.js"></script>
