added save button

--- a/index.html
+++ b/index.html
@@ -35,55 +35,55 @@
       <div class="row">
        <div class="col-sm-1">9a</div>
        <div class="col-sm-10">Text</div>
-       <div class="col-sm-1">Save Icon</div>
+       <button type= "button" id="save-btn" class="col-sm-1">Save</button>
       </div>
 
       <div class="row">
         <div class="col-sm-1">10a</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">11a</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">12p</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">1p</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">2p</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">3p</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">4p</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">5p</div>
         <div class="col-sm-10">Text</div>
-        <div class="col-sm-1">Save Icon</div>
+        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
    
 </div>
