--- a/index.html
+++ b/index.html
@@ -34,55 +34,55 @@
       
       <div class="row">
        <div class="col-sm-1">9a</div>
-       <div class="col-sm-10">Text</div>
-       <button type= "button" id="save-btn" class="col-sm-1">Save</button>
+       <textarea class="col-sm-10"></textarea>
+       <button class="save-btn col-sm-1" type= "button">Save</button>
       </div>
 
       <div class="row">
         <div class="col-sm-1">10a</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">11a</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">12p</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">1p</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">2p</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">3p</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">4p</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
         <div class="col-sm-1">5p</div>
-        <div class="col-sm-10">Text</div>
+        <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
    
