border around times added, new bug has entered room

--- a/index.html
+++ b/index.html
@@ -33,55 +33,55 @@
     
       
       <div class="row">
-       <div class="col-sm-1">9a</div>
+        <span class="border border-left-0">9a</span>
        <textarea class="col-sm-10"></textarea>
-       <button class="save-btn col-sm-1" type= "button">Save</button>
+       <button type= "button" id="save-btn" class="col-sm-1">Save</button>
       </div>
 
       <div class="row">
-        <div class="col-sm-1">10a</div>
+        <span class="border border-left-0">10a</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
-        <div class="col-sm-1">11a</div>
+        <span class="border border-left-0">11a</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
-        <div class="col-sm-1">12p</div>
+        <span class="border border-left-0">12p</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
-        <div class="col-sm-1">1p</div>
+        <span class="border border-left-0">1p</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
-        <div class="col-sm-1">2p</div>
+        <span class="border border-left-0">2p</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
-        <div class="col-sm-1">3p</div>
+        <span class="border border-left-0">3p</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
-        <div class="col-sm-1">4p</div>
+        <span class="border border-left-0">4p</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
 
        <div class="row">
-        <div class="col-sm-1">5p</div>
+        <span class="border border-left-0">5p</span>
         <textarea class="col-sm-10"></textarea>
         <button type= "button" id="save-btn" class="col-sm-1">Save</button>
        </div>
