--- a/index.html
+++ b/index.html
@@ -28,63 +28,61 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+  <div class="container">
       <!-- Timeblocks go here -->
-    
-      
-      <div class="row">
-        <span class="border border-left-0">9a</span>
-       <textarea class="col-sm-10"></textarea>
-       <button type= "button" id="save-btn" class="col-sm-1">Save</button>
+      <div id="hour-1" class="row time-block">
+        <div class="col-md-1 hour">9a</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row">
-        <span class="border border-left-0">10a</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+      <div id="hour-2" class="row time-block">
+        <div class="col-md-1 hour">10a</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
-       <div class="row">
-        <span class="border border-left-0">11a</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+       <div id="hour-3" class="row time-block">
+        <div class="col-md-1 hour">11a</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
-       <div class="row">
-        <span class="border border-left-0">12p</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+       <div id="hour-4" class="row time-block">
+        <div class="col-md-1 hour">12p</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
-       <div class="row">
-        <span class="border border-left-0">1p</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+       <div id="hour-5" class="row time-block">
+        <div class="col-md-1 hour">1p</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
-       <div class="row">
-        <span class="border border-left-0">2p</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+       <div id="hour-6" class="row time-block">
+        <div class="col-md-1 hour">2p</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
-       <div class="row">
-        <span class="border border-left-0">3p</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+       <div id="hour-7" class="row time-block">
+        <div class="col-md-1 hour">3p</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
-       <div class="row">
-        <span class="border border-left-0">4p</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+       <div id="hour-8" class="row time-block">
+        <div class="col-md-1 hour">4p</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
 
-       <div class="row">
-        <span class="border border-left-0">5p</span>
-        <textarea class="col-sm-10"></textarea>
-        <button type= "button" id="save-btn" class="col-sm-1">Save</button>
-       </div>
+       <div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">5p</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
    
 </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
